--- a/6-blue-1/form.html
+++ b/6-blue-1/form.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="http://localhost:8081/aaa" method="get">
+    <form action="http://localhost:8081/aaa" method="post">
         用户: <input type="text" name="user"><br>
         密码: <input type="password" name="mm"><br>
         <input type="submit" value="提交">
